[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gis-tool"
version = "0.1.0"
description = "A CLI tool for ArcGIS user and group management"
readme = "README.md"
requires-python = ">=3.10, <3.14"
authors = [
    {name = "Andy", email = "geogeek93@gmail.com"}
]
dependencies = [
    "arcgis",
]

[project.scripts]
# This creates the command 'gis-tool' which runs the main() function
gis-tool = "gis_tool.main:main"

[tool.setuptools.packages.find]
where = ["src"]